--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,6 +30,30 @@ html, body {
     justify-content: flex-end;
 }
 
+.invisible {
+    display:none;
+}
+
+#contact-first-row {
+    width: 100%;
+    min-height:400px;
+    flex-grow:2;
+    background-color:red;
+}
+
+#contact-second-row {
+    width:100%;
+    flex-basis:200px;
+    background-color:blue;
+}
+
+#contact-page-wrapper {
+    width:100%;
+    height:100%;
+    display:flex;
+    flex-direction: column;
+}
+
 /*
 */
 .not-landing-page {
