--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,6 +21,12 @@ html, body {
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Open Sans Bold';
+    src: url('../fonts/OpenSansBold.woff2') format('woff2');
+    font-style:normal;
+}
+
 #header {
     width: 100%;
     height:94%;
@@ -32,26 +38,6 @@ html, body {
 
 .invisible {
     display:none;
-}
-
-#contact-first-row {
-    width: 100%;
-    min-height:400px;
-    flex-grow:2;
-    background-color:red;
-}
-
-#contact-second-row {
-    width:100%;
-    flex-basis:200px;
-    background-color:blue;
-}
-
-#contact-page-wrapper {
-    width:100%;
-    height:100%;
-    display:flex;
-    flex-direction: column;
 }
 
 /*
