--- a/src/css/contactUs.css
+++ b/src/css/contactUs.css
@@ -54,3 +54,17 @@
     color:black;
     font-family: 'Open Sans', Arial;
 }
+
+#contact-second-row {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#image-of-store {
+    align-self: normal;
+}
+
+#contact-second-row {
+    text-align: center;
+}
