--- a/src/css/contactUs.css
+++ b/src/css/contactUs.css
@@ -67,4 +67,28 @@
 
 #contact-second-row {
     text-align: center;
+    font-family: 'Open Sans';
+}
+
+.bold {
+    font-family: 'Open Sans Bold';
+
+}
+
+#second-content-wrapper {
+    flex-grow:2;
+    background-color:red;
+    height:100%;
+
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#second-content-wrapper div {
+    margin: 0 15px;
+}
+
+#contact-Contact {
+    /* margin-left:30px !important; */
 }
