Fixed toggle bug

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -9,6 +9,10 @@
 
 #menu-page-wrapper img {
     border-radius: 7px;
+    cursor: pointer;
+}
+
+#menu-page-wrapper img:hover {
 }
 
 #menu-page-wrapper > div {
