--- a/src/css/contactUs.css
+++ b/src/css/contactUs.css
@@ -77,7 +77,7 @@
 
 #second-content-wrapper {
     flex-grow:2;
-    background-color:red;
+    background-color:rgb(231, 231, 231);
     height:100%;
 
     display:flex;
