--- a/src/css/main.css
+++ b/src/css/main.css
@@ -136,7 +136,8 @@ html, body {
 }
 
 #animation-header-element {
-    width:100%;
+    /* width:100%; */
+    /* width:20px; */
     position: absolute;
     z-index:2;
 
